--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="down">
+    <footer class="footer-section">
       <div class="container footer-container">
         <div class="page-footer">
           <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
