--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
           <li class="item"><button type="button" class="button secondary">Дизайн</button></li>
           <li class="item"><button type="button" class="button secondary">Маркетинг</button></li>
         </ul>
-        <ul class="list product">
+        <ul class="product list">
           <li class="item">
             <div class="product-top-wrap">
               <img
@@ -73,9 +73,9 @@
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="border-product">
+            <div class="product-border">
               <h2 class="section-portfolio">Технокряк</h2>
-              <p class="product">Веб-сайт</p>
+              <p class="product-type">Веб-сайт</p>
             </div>
           </li>
           <li class="item">
@@ -86,9 +86,9 @@
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="border-product">
+            <div class="product-border">
               <h2 class="section-portfolio">Постер New Orlean vs Golden Star</h2>
-              <p class="product">Дизайн</p>
+              <p class="product-type">Дизайн</p>
             </div>
           </li>
           <li class="item">
@@ -99,9 +99,9 @@
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="border-product">
+            <div class="product-border">
               <h2 class="section-portfolio">Ресторан Seafood</h2>
-              <p class="product">Додаток</p>
+              <p class="product-type">Додаток</p>
             </div>
           </li>
           <li class="item">
@@ -112,9 +112,9 @@
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="border-product">
+            <div class="product-border">
               <h2 class="section-portfolio">Проєкт Prime</h2>
-              <p class="product">Маркетинг</p>
+              <p class="product-type">Маркетинг</p>
             </div>
           </li>
           <li class="item">
@@ -125,9 +125,9 @@
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="border-product">
+            <div class="product-border">
               <h2 class="section-portfolio">Проєкт Boxes</h2>
-              <p class="product">Додаток</p>
+              <p class="product-type">Додаток</p>
             </div>
           </li>
           <li class="item">
@@ -144,9 +144,9 @@
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="border-product">
+            <div class="product-border">
               <h2 class="section-portfolio">Inspiration has no Borders</h2>
-              <p class="product">Веб-сайт</p>
+              <p class="product-type">Веб-сайт</p>
             </div>
           </li>
           <li class="item">
@@ -157,9 +157,9 @@
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="border-product">
+            <div class="product-border">
               <h2 class="section-portfolio">Видання Limited Edition</h2>
-              <p class="product">Дизайн</p>
+              <p class="product-type">Дизайн</p>
             </div>
           </li>
           <li class="item">
@@ -170,9 +170,9 @@
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="border-product">
+            <div class="product-border">
               <h2 class="section-portfolio">Проєкт LAB</h2>
-              <p class="product">Маркетинг</p>
+              <p class="product-type">Маркетинг</p>
             </div>
           </li>
           <li class="item">
@@ -183,16 +183,16 @@
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="border-product">
+            <div class="product-border">
               <h2 class="section-portfolio">Growing Business</h2>
-              <p class="product">Додаток</p>
+              <p class="product-type">Додаток</p>
             </div>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer class="down">
+    <footer class="footer-section">
       <div class="container footer-container">
         <div class="page-footer">
           <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
