--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
       </section>
       <!-- Presentation -->
-      <section class="section make">
+      <section class="section work">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="list presentation">
@@ -129,7 +129,7 @@
             <li class="item">
               <img src="./images/designer.jpg" alt="Співробітник" width="270" />
               <div class="card">
-                <h3 class="team">Ігор Дем'яненко</h3>
+                <h3 class="team-title">Ігор Дем'яненко</h3>
                 <p class="profession">Product Designer</p>
                 <ul class="team-soc-list list">
                   <li class="team-soc-item">
@@ -163,7 +163,7 @@
             <li class="item">
               <img src="./images/developer.jpg" alt="Співробітниця" width="270" />
               <div class="card">
-                <h3 class="team">Ольга Рєпіна</h3>
+                <h3 class="team-title">Ольга Рєпіна</h3>
                 <p class="profession">Frontend Developer</p>
                 <ul class="team-soc-list list">
                   <li class="team-soc-item">
@@ -197,7 +197,7 @@
             <li class="item">
               <img src="./images/marketing.jpg" alt="Співробітник" width="270" />
               <div class="card">
-                <h3 class="team">Микола Тарасов</h3>
+                <h3 class="team-title">Микола Тарасов</h3>
                 <p class="profession">Marketing</p>
                 <ul class="team-soc-list list">
                   <li class="team-soc-item">
@@ -231,7 +231,7 @@
             <li class="item">
               <img src="./images/uidesigner.jpg" alt="Співробітник" width="270" />
               <div class="card">
-                <h3 class="team">Михайло Єрмаков</h3>
+                <h3 class="team-title">Михайло Єрмаков</h3>
                 <p class="profession">UI Designer</p>
                 <ul class="team-soc-list list">
                   <li class="team-soc-item">
