--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
         </div>
       </section>
       <!-- Presentation -->
-      <section class="section work">
+      <section class="section presentation">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
-          <ul class="list presentation">
+          <ul class="list presentation-list">
             <li class="item">
               <img
                 src="./images/computer.jpg"
