--- a/portfolio.html
+++ b/portfolio.html
@@ -18,25 +18,31 @@
   <body>
     <!-- Head -->
     <header>
-      <div class="container page-header">
+      <div class="container header__container">
         <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
-        <nav>
-          <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студія</a></li>
-            <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-            <li class="item"><a href="" class="link">Контакти</a></li>
+        <nav class="navigation">
+          <ul class="navigation__list list">
+            <li class="navigation__item item">
+              <a href="./index.html" class="navigation__link link">Студія</a>
+            </li>
+            <li class="navigation__item item">
+              <a href="./portfolio.html" class="navigation__link link current">Портфоліо</a>
+            </li>
+            <li class="navigation__item item">
+              <a href="" class="navigation__link link">Контакти</a>
+            </li>
           </ul>
         </nav>
-        <ul class="contact-info list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"
+        <ul class="contact__list list">
+          <li class="contact__item item">
+            <a href="mailto:info@devstudio.com" class="contact__link link"
               ><svg class="contact-icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="link"
+          <li class="contact__item item">
+            <a href="tel:+380961111111" class="contact__link link"
               ><svg class="contact-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
@@ -48,19 +54,27 @@
     <!-- Hero -->
     <main>
       <section class="section container">
-        <h1 class="visually-hidden">Портфоліо</h1>
+        <h1 class="visually__hidden">Портфоліо</h1>
         <ul class="filter list">
           <li class="item">
-            <button type="button" class="button secondary">Усі</button>
+            <button type="button" class="secondary__button button">Усі</button>
           </li>
-          <li class="item"><button type="button" class="button secondary">Веб-сайти</button></li>
-          <li class="item"><button type="button" class="button secondary">Додатки</button></li>
-          <li class="item"><button type="button" class="button secondary">Дизайн</button></li>
-          <li class="item"><button type="button" class="button secondary">Маркетинг</button></li>
-        </ul>
-        <ul class="product list">
           <li class="item">
-            <div class="product-top-wrap">
+            <button type="button" class="secondary__button button">Веб-сайти</button>
+          </li>
+          <li class="item">
+            <button type="button" class="secondary__button button">Додатки</button>
+          </li>
+          <li class="item">
+            <button type="button" class="secondary__button button">Дизайн</button>
+          </li>
+          <li class="item">
+            <button type="button" class="secondary__button button">Маркетинг</button>
+          </li>
+        </ul>
+        <ul class="product__list list">
+          <li class="item">
+            <div class="product__wrap">
               <img
                 src="./images/technocrack.jpg"
                 alt="Веб-сайт"
@@ -68,70 +82,70 @@
                 height="294"
                 class="jpg"
               />
-              <p class="product-top-text">
+              <p class="top__text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="product-border">
-              <h2 class="section-portfolio">Технокряк</h2>
-              <p class="product-type">Веб-сайт</p>
+            <div class="product__border">
+              <h2 class="section__portfolio">Технокряк</h2>
+              <p class="product__type">Веб-сайт</p>
             </div>
           </li>
           <li class="item">
-            <div class="product-top-wrap">
+            <div class="product__wrap">
               <img src="./images/poster.jpg" alt="Баскетбол" width="370" height="294" class="jpg" />
-              <p class="product-top-text">
+              <p class="top__text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="product-border">
-              <h2 class="section-portfolio">Постер New Orlean vs Golden Star</h2>
-              <p class="product-type">Дизайн</p>
+            <div class="product__border">
+              <h2 class="section__portfolio">Постер New Orlean vs Golden Star</h2>
+              <p class="product__type">Дизайн</p>
             </div>
           </li>
           <li class="item">
-            <div class="product-top-wrap">
+            <div class="product__wrap">
               <img src="./images/seafood.jpg" alt="Логотип" width="370" height="294" class="jpg" />
-              <p class="product-top-text">
+              <p class="top__text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="product-border">
-              <h2 class="section-portfolio">Ресторан Seafood</h2>
-              <p class="product-type">Додаток</p>
+            <div class="product__border">
+              <h2 class="section__portfolio">Ресторан Seafood</h2>
+              <p class="product__type">Додаток</p>
             </div>
           </li>
           <li class="item">
-            <div class="product-top-wrap">
+            <div class="product__wrap">
               <img src="./images/prime.jpg" alt="Навушники" width="370" height="294" class="jpg" />
-              <p class="product-top-text">
+              <p class="top__text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="product-border">
-              <h2 class="section-portfolio">Проєкт Prime</h2>
-              <p class="product-type">Маркетинг</p>
+            <div class="product__border">
+              <h2 class="section__portfolio">Проєкт Prime</h2>
+              <p class="product__type">Маркетинг</p>
             </div>
           </li>
           <li class="item">
-            <div class="product-top-wrap">
+            <div class="product__wrap">
               <img src="./images/boxes.jpg" alt="Коробки" width="370" height="294" class="jpg" />
-              <p class="product-top-text">
+              <p class="top__text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="product-border">
-              <h2 class="section-portfolio">Проєкт Boxes</h2>
-              <p class="product-type">Додаток</p>
+            <div class="product__border">
+              <h2 class="section__portfolio">Проєкт Boxes</h2>
+              <p class="product__type">Додаток</p>
             </div>
           </li>
           <li class="item">
-            <div class="product-top-wrap">
+            <div class="product__wrap">
               <img
                 src="./images/inspiration.jpg"
                 alt="Веб-сайт"
@@ -139,71 +153,71 @@
                 height="294"
                 class="jpg"
               />
-              <p class="product-top-text">
+              <p class="top__text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="product-border">
-              <h2 class="section-portfolio">Inspiration has no Borders</h2>
-              <p class="product-type">Веб-сайт</p>
+            <div class="product__border">
+              <h2 class="section__portfolio">Inspiration has no Borders</h2>
+              <p class="product__type">Веб-сайт</p>
             </div>
           </li>
           <li class="item">
-            <div class="product-top-wrap">
+            <div class="product__wrap">
               <img src="./images/edition.jpg" alt="Журнал" width="370" height="294" class="jpg" />
-              <p class="product-top-text">
+              <p class="top__text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="product-border">
-              <h2 class="section-portfolio">Видання Limited Edition</h2>
-              <p class="product-type">Дизайн</p>
+            <div class="product__border">
+              <h2 class="section__portfolio">Видання Limited Edition</h2>
+              <p class="product__type">Дизайн</p>
             </div>
           </li>
           <li class="item">
-            <div class="product-top-wrap">
+            <div class="product__wrap">
               <img src="./images/lab.jpg" alt="Бирка" width="370" height="294" class="jpg" />
-              <p class="product-top-text">
+              <p class="top__text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="product-border">
-              <h2 class="section-portfolio">Проєкт LAB</h2>
-              <p class="product-type">Маркетинг</p>
+            <div class="product__border">
+              <h2 class="section__portfolio">Проєкт LAB</h2>
+              <p class="product__type">Маркетинг</p>
             </div>
           </li>
           <li class="item">
-            <div class="product-top-wrap">
+            <div class="product__wrap">
               <img src="./images/business.jpg" alt="Додаток" width="370" height="294" class="jpg" />
-              <p class="product-top-text">
+              <p class="top__text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
-            <div class="product-border">
-              <h2 class="section-portfolio">Growing Business</h2>
-              <p class="product-type">Додаток</p>
+            <div class="product__border">
+              <h2 class="section__portfolio">Growing Business</h2>
+              <p class="product__type">Додаток</p>
             </div>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer-section">
-      <div class="container footer-container">
+    <footer class="footer__section">
+      <div class="container footer__container">
         <div class="page-footer">
           <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
           <address>
-            <ul class="site-footer list">
+            <ul class="site__footer list">
               <li class="item">
                 <a
                   href="https://goo.gl/maps/UnmmoopjUjEERXCH8"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="map-link"
+                  class="map__link"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
@@ -214,48 +228,48 @@
             </ul>
           </address>
         </div>
-        <div class="page-invait">
-          <h2 class="section-title-invait">приєднуйтесь</h2>
-          <ul class="invait-list list">
+        <div class="page__invait">
+          <h2 class="invait__title">приєднуйтесь</h2>
+          <ul class="invait__list list">
             <li class="invait-soc-item">
-              <a href="" class="invait-soc-link link"
-                ><svg class="invait-soc-icon" width="20" height="20">
+              <a href="" class="invait__link link"
+                ><svg class="invait__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="invait-soc-item">
-              <a href="" class="invait-soc-link link"
-                ><svg class="invait-soc-icon" width="20" height="20">
+              <a href="" class="invait__link link"
+                ><svg class="invait__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="invait-soc-item">
-              <a href="" class="invait-soc-link link"
-                ><svg class="invait-soc-icon" width="20" height="20">
+              <a href="" class="invait__link link"
+                ><svg class="invait__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="invait-soc-item">
-              <a href="" class="invait-soc-link link"
-                ><svg class="invait-soc-icon" width="20" height="20">
+              <a href="" class="invait__link link"
+                ><svg class="invait__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
         </div>
-        <form class="subscribe-form">
-          <label for="user-email" class="subscribe-label">Підпишіться на розсилку</label>
-          <div class="footer-subscribe">
+        <form class="subscribe__form">
+          <label for="user-email" class="subscribe__label">Підпишіться на розсилку</label>
+          <div class="footer__subscribe">
             <input
               type="email"
-              class="subscribe-input"
+              class="subscribe__input"
               name="user-email"
               id="subscribe-email"
               placeholder="E-mail"
               required
             />
-            <button class="subscribe-button" type="submit">Підписатися</button>
-            <svg class="subscribe-icon" width="24" height="24">
+            <button class="subscribe__button" type="submit">Підписатися</button>
+            <svg class="subscribe__icon" width="24" height="24">
               <use href="./images/icons.svg#icon-send"></use>
             </svg>
           </div>
