--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         <ul class="contact__list list">
           <li class="contact__item item">
             <a href="mailto:info@devstudio.com" class="contact__link link"
-              ><svg class="contact-icon" width="16" height="12">
+              ><svg class="contact__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="contact__item item">
             <a href="tel:+380961111111" class="contact__link link"
-              ><svg class="contact-icon" width="10" height="16">
+              ><svg class="contact__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
