--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
     <!-- Hero -->
     <main>
       <section class="section container">
-        <h1 class="visually__hidden">Портфоліо</h1>
+        <h1 class="visually_hidden">Портфоліо</h1>
         <ul class="filter list">
           <li class="item">
             <button type="button" class="secondary__button button">Усі</button>
