--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
       <section class="section page-team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="team__list list">
-            <li class="item">
+          <ul class="team list">
+            <li class="team-item item">
               <img src="./images/designer.jpg" alt="Співробітник" width="270" />
-              <div class="card">
-                <h3 class="team__title">Ігор Дем'яненко</h3>
-                <p class="profession">Product Designer</p>
+              <div class="team-card">
+                <h3 class="team-card__title">Ігор Дем'яненко</h3>
+                <p class="team-card__profession">Product Designer</p>
                 <ul class="soc__list list">
                   <li class="team-soc-item">
                     <a href="" class="soc__link link">
