--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Head -->
     <header>
       <div class="container page-header">
-        <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="page-header__logo">Studio</span></a>
         <nav class="navigation">
           <ul class="navigation__list list">
             <li class="navigation__item item">
@@ -321,7 +321,7 @@
       <div class="container page-footer">
         <div class="footer-info">
           <a href="./index.html" class="footer-info__logo logo"
-            >Web<span class="accent">Studio</span></a
+            >Web<span class="footer-info__logo--inverse">Studio</span></a
           >
           <address>
             <ul class="footer-info__list list">
@@ -451,7 +451,7 @@
                   <use href="./images/icons.svg#icon-check"></use></svg></span
               ><span
                 >Погоджуюся з розсилкою та приймаю
-                <a href="" class="agree__link link"> Умови договору</a></span
+                <a href="" class="modal__link link"> Умови договору</a></span
               ></label
             >
           </div>
