--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
   <body>
     <!-- Head -->
     <header>
-      <div class="container header__container">
-        <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
+      <div class="container page-header">
+        <a href="./index.html" class="logo">Web<span class="page-header__logo">Studio</span></a>
         <nav class="navigation">
           <ul class="navigation__list list">
             <li class="navigation__item item">
@@ -33,7 +33,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="contact__list list">
+        <ul class="contact list">
           <li class="contact__item item">
             <a href="mailto:info@devstudio.com" class="contact__link link"
               ><svg class="contact__icon" width="16" height="12">
@@ -56,24 +56,24 @@
       <section class="section container">
         <h1 class="visually_hidden">Портфоліо</h1>
         <ul class="filter list">
-          <li class="item">
-            <button type="button" class="secondary__button button">Усі</button>
+          <li class="filter__item item">
+            <button type="button" class="filter__button button">Усі</button>
           </li>
-          <li class="item">
-            <button type="button" class="secondary__button button">Веб-сайти</button>
+          <li class="filter__item item">
+            <button type="button" class="filter__button button">Веб-сайти</button>
           </li>
-          <li class="item">
-            <button type="button" class="secondary__button button">Додатки</button>
+          <li class="filter__item item">
+            <button type="button" class="filter__button button">Додатки</button>
           </li>
-          <li class="item">
-            <button type="button" class="secondary__button button">Дизайн</button>
+          <li class="filter__item item">
+            <button type="button" class="filter__button button">Дизайн</button>
           </li>
-          <li class="item">
-            <button type="button" class="secondary__button button">Маркетинг</button>
+          <li class="filter__item item">
+            <button type="button" class="filter__button button">Маркетинг</button>
           </li>
         </ul>
-        <ul class="product__list list">
-          <li class="item">
+        <ul class="product list">
+          <li class="product__item item">
             <div class="product__wrap">
               <img
                 src="./images/technocrack.jpg"
@@ -82,69 +82,69 @@
                 height="294"
                 class="jpg"
               />
-              <p class="top__text">
+              <p class="product__description">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
             <div class="product__border">
-              <h2 class="section__portfolio">Технокряк</h2>
+              <h2 class="product__title">Технокряк</h2>
               <p class="product__type">Веб-сайт</p>
             </div>
           </li>
-          <li class="item">
+          <li class="product__item item">
             <div class="product__wrap">
               <img src="./images/poster.jpg" alt="Баскетбол" width="370" height="294" class="jpg" />
-              <p class="top__text">
+              <p class="product__description">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
             <div class="product__border">
-              <h2 class="section__portfolio">Постер New Orlean vs Golden Star</h2>
+              <h2 class="product__title">Постер New Orlean vs Golden Star</h2>
               <p class="product__type">Дизайн</p>
             </div>
           </li>
-          <li class="item">
+          <li class="product__item item">
             <div class="product__wrap">
               <img src="./images/seafood.jpg" alt="Логотип" width="370" height="294" class="jpg" />
-              <p class="top__text">
+              <p class="product__description">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
             <div class="product__border">
-              <h2 class="section__portfolio">Ресторан Seafood</h2>
+              <h2 class="product__title">Ресторан Seafood</h2>
               <p class="product__type">Додаток</p>
             </div>
           </li>
-          <li class="item">
+          <li class="product__item item">
             <div class="product__wrap">
               <img src="./images/prime.jpg" alt="Навушники" width="370" height="294" class="jpg" />
-              <p class="top__text">
+              <p class="product__description">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
             <div class="product__border">
-              <h2 class="section__portfolio">Проєкт Prime</h2>
+              <h2 class="product__title">Проєкт Prime</h2>
               <p class="product__type">Маркетинг</p>
             </div>
           </li>
-          <li class="item">
+          <li class="product__item item">
             <div class="product__wrap">
               <img src="./images/boxes.jpg" alt="Коробки" width="370" height="294" class="jpg" />
-              <p class="top__text">
+              <p class="product__description">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
             <div class="product__border">
-              <h2 class="section__portfolio">Проєкт Boxes</h2>
+              <h2 class="product__title">Проєкт Boxes</h2>
               <p class="product__type">Додаток</p>
             </div>
           </li>
-          <li class="item">
+          <li class="product__item item">
             <div class="product__wrap">
               <img
                 src="./images/inspiration.jpg"
@@ -153,52 +153,52 @@
                 height="294"
                 class="jpg"
               />
-              <p class="top__text">
+              <p class="product__description">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
             <div class="product__border">
-              <h2 class="section__portfolio">Inspiration has no Borders</h2>
+              <h2 class="product__title">Inspiration has no Borders</h2>
               <p class="product__type">Веб-сайт</p>
             </div>
           </li>
-          <li class="item">
+          <li class="product__item item">
             <div class="product__wrap">
               <img src="./images/edition.jpg" alt="Журнал" width="370" height="294" class="jpg" />
-              <p class="top__text">
+              <p class="product__description">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
             <div class="product__border">
-              <h2 class="section__portfolio">Видання Limited Edition</h2>
+              <h2 class="product__title">Видання Limited Edition</h2>
               <p class="product__type">Дизайн</p>
             </div>
           </li>
-          <li class="item">
+          <li class="product__item item">
             <div class="product__wrap">
               <img src="./images/lab.jpg" alt="Бирка" width="370" height="294" class="jpg" />
-              <p class="top__text">
+              <p class="product__description">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
             <div class="product__border">
-              <h2 class="section__portfolio">Проєкт LAB</h2>
+              <h2 class="product__title">Проєкт LAB</h2>
               <p class="product__type">Маркетинг</p>
             </div>
           </li>
-          <li class="item">
+          <li class="product__item item">
             <div class="product__wrap">
               <img src="./images/business.jpg" alt="Додаток" width="370" height="294" class="jpg" />
-              <p class="top__text">
+              <p class="product__description">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
               </p>
             </div>
             <div class="product__border">
-              <h2 class="section__portfolio">Growing Business</h2>
+              <h2 class="product__title">Growing Business</h2>
               <p class="product__type">Додаток</p>
             </div>
           </li>
@@ -206,70 +206,76 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer__section">
-      <div class="container footer__container">
-        <div class="page-footer">
-          <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
+    <footer class="footer">
+      <div class="container page-footer">
+        <div class="footer-info">
+          <a href="./index.html" class="footer-info__logo logo"
+            >Web<span class="footer-info__logo--inverse">Studio</span></a
+          >
           <address>
-            <ul class="site__footer list">
-              <li class="item">
+            <ul class="footer-info__list list">
+              <li class="footer-info__item item">
                 <a
                   href="https://goo.gl/maps/UnmmoopjUjEERXCH8"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="map__link"
+                  class="footer-info__link"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="item">
-                <a href="mailto:info@example.com" class="link">info@example.com</a>
+              <li class="footer-info__item item">
+                <a href="mailto:info@example.com" class="footer-info__link link"
+                  >info@example.com</a
+                >
               </li>
-              <li class="item"><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
+              <li class="footer-info__item item">
+                <a href="tel:+380991111111" class="footer-info__link link">+38 099 111 11 11</a>
+              </li>
             </ul>
           </address>
         </div>
-        <div class="page__invait">
-          <h2 class="invait__title">приєднуйтесь</h2>
-          <ul class="invait__list list">
-            <li class="invait-soc-item">
+        <div class="page-invait">
+          <h2 class="page-invait__title">приєднуйтесь</h2>
+          <ul class="invait-social list">
+            <li class="invait-social__item">
               <a href="" class="invait__link link"
-                ><svg class="invait__icon" width="20" height="20">
+                ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
-            <li class="invait-soc-item">
+            <li class="invait-social__item">
               <a href="" class="invait__link link"
-                ><svg class="invait__icon" width="20" height="20">
+                ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
-            <li class="invait-soc-item">
+            <li class="invait-social__item">
               <a href="" class="invait__link link"
-                ><svg class="invait__icon" width="20" height="20">
+                ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
-            <li class="invait-soc-item">
+            <li class="invait-social__item">
               <a href="" class="invait__link link"
-                ><svg class="invait__icon" width="20" height="20">
+                ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
         </div>
-        <form class="subscribe__form">
-          <label for="user-email" class="subscribe__label">Підпишіться на розсилку</label>
-          <div class="footer__subscribe">
+        <form class="subscribe-form">
+          <label for="user-email" class="subscribe-form__label">Підпишіться на розсилку</label>
+          <div class="footer-subscribe">
             <input
               type="email"
-              class="subscribe__input"
+              class="footer-subscribe__input"
               name="user-email"
               id="subscribe-email"
               placeholder="E-mail"
               required
             />
-            <button class="subscribe__button" type="submit">Підписатися</button>
-            <svg class="subscribe__icon" width="24" height="24">
+            <button class="footer-subscribe__button" type="submit">Підписатися</button>
+            <svg class="footer-subscribe__icon" width="24" height="24">
               <use href="./images/icons.svg#icon-send"></use>
             </svg>
           </div>
